--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -43,50 +43,12 @@
 <body>
     <header th:replace="index :: header">
     </header>
-    <div class="container">
-        <ul class="nav">
-            <li class="nav-item">
-                <a class="nav-link text-secondary" href="#"><i class="bi bi-box-seam me-1"></i> Products</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link text-secondary" href="#"><i class="bi bi-house-door me-1"></i> Rooms</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link text-secondary" href="#">Deals</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link text-secondary" href="#">Spring home ideas</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link text-secondary" href="#">Home accessories</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link text-secondary" href="#">Ideas & inspiration</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link text-secondary" href="#">Design & planning</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link text-secondary" href="#">IKEA for Business</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link text-secondary" href="#">Services <i class="bi bi-chevron-down"></i></a>
-            </li>
-        </ul>
-    </div>
+    <div th:replace="index:: navbar"></div>
     <section>
         <div class="container py-5">
             <div class="row">
                 <div class="col-md-4 col-lg-4 mb-4 mb-lg-0" th:each="product : ${products}">
                     <div class="card">
-<!--                        <div class="d-flex justify-content-between p-3">-->
-<!--                            <p class="lead mb-0" th:text="${product.price}"></p>-->
-<!--                            <div-->
-<!--                                    class="bg-info rounded-circle d-flex align-items-center justify-content-center shadow-1-strong"-->
-<!--                                    style="width: 35px; height: 35px;">-->
-<!--                                <p class="text-white mb-0 small">x4</p>-->
-<!--                            </div>-->
-<!--                        </div>-->
                         <a th:href="@{/menu/products/{product_id}/product-detail(product_id = ${product.product_id})}"><img th:src="@{${product.product_images[0].image_url}}"
                                 class="card-img-top" alt="Laptop" /></a>
                         <div class="card-body">
