--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -45,10 +45,10 @@
     </header>
     <div th:replace="index:: navbar"></div>
     <section>
-        <div class="container py-5">
+        <div class="fade-in container py-2" >
             <div class="row">
-                <div class="col-md-4 col-lg-4 mb-4 mb-lg-0" th:each="product : ${products}">
-                    <div class="card">
+                <div class="col-md-3 col-lg-3 mb-4 mb-lg-0" th:each="product : ${products}">
+                    <div class="card mb-4 scale-hover">
                         <a th:href="@{/menu/products/{product_id}/product-detail(product_id = ${product.product_id})}"><img th:src="@{${product.product_images[0].image_url}}"
                                 class="card-img-top" alt="Laptop" /></a>
                         <div class="card-body">
@@ -57,7 +57,7 @@
                                 <p><i class="bi bi-heart fs-5 text-dark"></i></p>
                             </div>
                             <div class="d-flex justify-content-between mb-2">
-                                <p class="text-muted mb-0">Available: <span class="fw-bold">6</span></p>
+                                <p class="text-muted mb-0">Available: <span class="fw-bold" th:text="${product.stock_quantity}"></span></p>
                                 <p class="small text-danger" th:text="${#numbers.formatDecimal(product.price,0, 'COMMA', 0, 'POINT')+'₫'}"></p>
                             </div>
                         </div>
