--- a/src/main/resources/templates/register-page.html
+++ b/src/main/resources/templates/register-page.html
@@ -71,7 +71,7 @@
              style="background-image: url('../assets/img/pexels-faheem-ahamad-422934800-15745114.jpg');background-repeat: no-repeat; background-size: cover;">
         </div>
         <div class="col-md-6 right-section">
-            <p class="position-absolute top-0 end-0 pt-2 pe-4"><a th:href="@{/login}" class="text-secondary">Đã có tài
+            <p class="position-absolute top-0 end-0 pt-2 pe-4"><a th:href="@{/login/user}" class="text-secondary">Đã có tài
                 khoản? Tới
                 đăng nhập →</a></p>
             <div class="signup-container">
