--- a/src/main/resources/templates/admin/admin-layouts.html
+++ b/src/main/resources/templates/admin/admin-layouts.html
@@ -255,7 +255,7 @@
           </li>
 
           <li>
-            <a class="dropdown-item d-flex align-items-center" href="#">
+            <a class="dropdown-item d-flex align-items-center" th:href="@{/login/admin}">
               <i class="bi bi-box-arrow-right"></i>
               <span>Sign Out</span>
             </a>
