--- a/src/main/resources/templates/login-page.html
+++ b/src/main/resources/templates/login-page.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en"
-      xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+      xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -56,7 +55,7 @@
     </style>
 </head>
 <body>
-<section class="vh-100" style="background-color: #508bfc;">
+<section class="h-100" style="background-color: #508bfc;">
 <!--    Alerts-->
     <div th:if="${error}" class="alert alert-danger custom-alert alert-dismissible fade show "
          id="loginAlert"
