--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html xmlns:th="https://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
       lang="en">
 <head>
     <meta charset="utf-8">
@@ -68,6 +67,36 @@
                 opacity: 0;
             }
         }
+
+        .card {
+            position: relative;
+            transition: all 0.3s ease;
+        }
+
+        .button-container {
+            display: none; /* Hidden by default */
+            justify-content: center;
+            gap: 10px; /* Space between buttons */
+            padding: 10px;
+            opacity: 0;
+            transition: opacity 0.3s ease;
+
+        }
+        .button-container > form > button{
+            font-size: 12px;
+        }
+        .button-container > button{
+            font-size: 12px;
+        }
+
+        .card:hover .button-container {
+            display: flex; /* Show buttons on hover */
+            opacity: 1; /* Fade in effect */
+        }
+        .card:hover .prima-info{
+            display: none;
+        }
+
     </style>
 </head>
 
@@ -87,13 +116,26 @@
                         <a th:href="@{/menu/products/{product_id}/product-detail(product_id = ${product.product_id})}"><img th:src="@{${product.primary_image}}"
                                 class="card-img-top" alt="Laptop" /></a>
                         <div class="card-body">
-                            <div class="d-flex justify-content-between">
-                                <p class="small"><a href="#!" th:text="${product.name}" class="text-muted"></a></p>
-                                <p><i class="bi bi-heart fs-5 text-dark"></i></p>
+                            <div class="prima-info">
+                                <div class="d-flex justify-content-between">
+                                    <p class="small"><a href="#!" th:text="${product.name}" class="text-muted"></a></p>
+                                    <p><i class="bi bi-heart fs-5 text-dark"></i></p>
+                                </div>
+                                <div class="d-flex justify-content-between mb-2">
+                                    <p class="text-muted mb-0">Available: <span class="fw-bold" th:text="${product.stock_quantity}"></span></p>
+                                    <p class="small text-danger" th:text="${#numbers.formatDecimal(product.price,0, 'COMMA', 0, 'POINT')+'₫'}"></p>
+                                </div>
                             </div>
-                            <div class="d-flex justify-content-between mb-2">
-                                <p class="text-muted mb-0">Available: <span class="fw-bold" th:text="${product.stock_quantity}"></span></p>
-                                <p class="small text-danger" th:text="${#numbers.formatDecimal(product.price,0, 'COMMA', 0, 'POINT')+'₫'}"></p>
+                            <div class="button-container ">
+                                <form th:action="@{/menu/gio-hang}" method="post">
+                                    <input type="hidden" name="product_id" th:value="${product.product_id}" />
+                                    <button type="submit" class="btn btn-dark btn-lg rounded-0 mb-3 me-2">
+                                        <i class="bi bi-cart-plus"></i> Add to Cart
+                                    </button>
+                                </form>
+                                <button class="btn btn-outline-secondary rounded-0 btn-lg mb-3">
+                                    <i class="bi bi-heart"></i> Add to Wishlist
+                                </button>
                             </div>
                         </div>
                     </div>
