--- a/src/main/resources/templates/login-page.html
+++ b/src/main/resources/templates/login-page.html
@@ -12,8 +12,14 @@
     <!-- Font Awesome for icons -->
     <link th:href="@{https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css}" rel="stylesheet">
     <style>
-        .vh-100 {
-          min-height: 100vh;
+        html, body {
+            height: 100%;
+            margin: 0; /* Remove default margins */
+        }
+        section{
+            min-height: 100vh;
+            display:flex;
+            align-items:center;
         }
         .custom-alert {
             position: fixed;
@@ -24,7 +30,7 @@
             border: none;
             border-radius: 8px;
             box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
-    
+
             font-weight: 500;
             padding: 1rem 1.5rem;
             animation: slideIn 0.5s ease-in-out;
@@ -55,18 +61,18 @@
     </style>
 </head>
 <body>
-<section class="h-100" style="background-color: #508bfc;">
+<section style="background-color: #508bfc;">
 <!--    Alerts-->
     <div th:if="${error}" class="alert alert-danger custom-alert alert-dismissible fade show "
          id="loginAlert"
          role="alert">
         <span th:text="${error}"></span>
     </div>
-    <div class="container py-5 h-100">
-        <div class="row d-flex justify-content-center align-items-center h-100">
+    <div class="container py-3 ">
+        <div class="row d-flex justify-content-center align-items-center ">
             <div class="col-12 col-md-8 col-lg-6 col-xl-5">
                 <div class="card shadow-2-strong" style="border-radius: 1rem;">
-                    <form class="card-body p-5 text-center" role="form" th:action="@{/login/user}" method="post"
+                    <form class="card-body p-5 text-center"  role="form" th:action="@{/login/user}" method="post"
                           th:object="${user}" autocomplete="off">
 
                         <h3 class="mb-5">Đăng nhập</h3>
